crates/cuda-macros/tests/compile_fail/launch_contract_wrong_const_brand.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/launch_contract_wrong_const_brand.rs:23:46
   |
23 |     let _ = module.const_kernel::<8>(stream, prepared, input);
   |                    -----------------         ^^^^^^^^ expected `8`, found `4`
   |                    |
   |                    arguments to this method are incorrect
   |
   = note: expected reference `&PreparedLaunch<__const_kernel_CudaKernel<8>>`
              found reference `&PreparedLaunch<__const_kernel_CudaKernel<4>>`
note: method defined here
  --> tests/compile_fail/launch_contract_wrong_const_brand.rs:12:12
   |
 6 | #[cuda_module]
   | --------------
...
12 |     pub fn const_kernel<const N: usize>(input: &[u32]) {
   |            ^^^^^^^^^^^^
